slider and layer img set

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -99,7 +99,7 @@
                 <button id="close-btn" class="text-white text-5xl">×</button>
               </div>
               <div class="px-4 pt-24 pb-4">
-                <div class="flex flex-col gap-[40px] items-center">
+                <div class="flex flex-col gap-10 items-center">
                   <a
                     class="roboto-mono text-[#D7D9DD] hover:text-white font-medium tracking-[1.4px] text-sm links duration-700"
                     href="./sevices.html"
@@ -170,14 +170,12 @@
             alt="bg-img"
           />
         </div>
-        <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto relative z-[2]"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto relative z-[2]">
           <div
             class="max-w-[528px] pt-[35px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] max-[400px]:mb-[360px] max-[640px]:mb-[460px] max-[600px]:mb-[560px] max-[700px]:mb-[660px] max-[768px]:mb-[680px]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] max-[400px]:!mb-[330px] max-[500px]:!mb-[420px] max-[600px]:!mb-[500px] max-[700px]:!mb-[600px] max-[768px]:mb-[660px]"
             >
               About <br />
               Nebula Vets
@@ -206,7 +204,7 @@
     <!--  -->
     <section class="overflow-hidden">
       <div
-        class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
+        class="max-w-[1160px] px-8 sm:px-10 mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
       >
         <div
           class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
@@ -267,7 +265,7 @@
           <img src="./assetes/img/png/about-img-2-bg-img.png" alt="bg-img" />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap-reverse relative z-[1]"
+          class="max-w-[1160px] px-8 sm:px-10 mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap-reverse relative z-[1]"
         >
           <div
             class="lg:w-[50.65%]"
@@ -308,7 +306,7 @@
             </p>
           </div>
           <div
-            class="min-[1220px]:mr-[-5%] min-[1280px]:mr-[-8%] min-[1360px]:mr-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
+            class="min-[1220px]:!mr-[-5%] min-[1280px]:!mr-[-8%] min-[1360px]:!mr-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -329,7 +327,7 @@
     <!--  -->
     <section class="overflow-hidden">
       <div
-        class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
+        class="max-w-[1160px] px-8 sm:px-10 mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap"
       >
         <div
           class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
@@ -494,7 +492,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -616,22 +614,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -645,12 +643,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -666,12 +664,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
