--- a/diagnostics.html
+++ b/diagnostics.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -156,7 +156,7 @@
             alt="bg-img"
           />
         </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[631px] pt-[176px] md:pt-[133px] pb-[60px] md:pb-[80px]"
           >
@@ -197,7 +197,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -229,7 +229,7 @@
     </section>
     <!--  -->
     <section class="overflow-hidden">
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <div>
             <button
@@ -308,7 +308,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -381,7 +381,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -454,7 +454,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -527,7 +527,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -599,7 +599,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -674,7 +674,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -752,7 +752,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -776,7 +776,7 @@
     </section>
     <!--  -->
     <section>
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <div>
             <button
@@ -855,7 +855,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -928,7 +928,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -1003,9 +1003,7 @@
     <!-- slider -->
     <section>
       <div class="bg-white overflow-hidden">
-        <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <h2
             class="text-[#464334] text-2xl sm:text-4xl lg:text-[48px] text-gredient"
           >
@@ -1124,7 +1122,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[80px] mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[80px] mx-auto"
         >
           <div
             class="max-w-[530px]"
@@ -1149,7 +1147,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -1271,22 +1269,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -1300,12 +1298,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -1321,12 +1319,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
