--- a/index.html
+++ b/index.html
@@ -219,9 +219,7 @@
     <!-- why choose -->
     <section>
       <div class="bg-[#494336] overflow-hidden">
-        <div
-          class="max-w-[1160px] px-8 sm:px-10 py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <p
             class="text-[#D7D9DD] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] mb-10 max-sm:text-center md:mb-[58px] leading-[normal]"
           >
@@ -959,9 +957,7 @@
             alt="dog-cat-img"
           />
         </div>
-        <div
-          class="max-w-[1160px] px-8 sm:px-10 py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
             class="max-w-[568px]"
             data-aos="zoom-in"
@@ -993,7 +989,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -1115,22 +1111,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -1144,12 +1140,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -1165,12 +1161,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
