--- a/sevices.html
+++ b/sevices.html
@@ -32,7 +32,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -159,7 +159,7 @@
         data-aos-duration="1000"
         class="bg-[#494336] max-[950px]:bg-[url('./assetes/img/png/hero-s-cat-d-img-2.png')] min-[950px]:bg-[url('./assetes/img/png/hero-section-cat-dog-img.png')] bg-no-repeat bg-right-bottom mt-[102px] sm:mt-[88px] lg:mt-[98px]"
       >
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[660px] pt-[30px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[140px] pb-[274px] min-[950px]:pb-[75px]"
           >
@@ -347,7 +347,7 @@
                 src="./assetes/img/png/Preventive care big.png"
                 alt="preventive-care"
               />
-              <div class="px-[32px] lg:pl-6">
+              <div class="px-8 lg:pl-6">
                 <p
                   class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
                 >
@@ -386,7 +386,7 @@
             class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
           >
             <div
-              class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
+              class="py-15 max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
               <div class="pb-[59px] md:pb-[60px]">
                 <p
@@ -477,7 +477,7 @@
                 src="./assetes/img/png/Sick patient icon.png"
                 alt="sick-patient"
               />
-              <div class="px-[32px] lg:pl-6">
+              <div class="px-8 lg:pl-6">
                 <p
                   class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
                 >
@@ -514,7 +514,7 @@
             class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
           >
             <div
-              class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
+              class="py-15 max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
               <div class="pb-[59px] md:pb-[60px]">
                 <p
@@ -625,7 +625,7 @@
                 src="./assetes/img/png/Surgery icon (1).png"
                 alt="surgery-icon"
               />
-              <div class="px-[32px] lg:pl-6">
+              <div class="px-8 lg:pl-6">
                 <p
                   class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
                 >
@@ -660,7 +660,7 @@
             class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
           >
             <div
-              class="py-[60px] max-md:px-8 md:pt-20 md:pb-[100px] sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
+              class="py-15 max-md:px-8 md:pt-20 md:pb-[100px] sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
               <div class="pb-[59px] md:pb-[60px]">
                 <p
@@ -728,7 +728,7 @@
                 src="./assetes/img/png/Additional icon.png"
                 alt="additional-icon"
               />
-              <div class="px-[32px] lg:pl-6">
+              <div class="px-8 lg:pl-6">
                 <p
                   class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
                 >
@@ -764,7 +764,7 @@
             class="max-w-[820px] bg-[rgba(215,217,221,0.50)] lg:pr-4"
           >
             <div
-              class="py-[60px] max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
+              class="py-15 max-md:px-8 md:py-20 sm:pl-8 md:pl-[40px] lg:pl-[80px] xl:pl-[110px] pr-[34px] w-full"
             >
               <div class="pb-[59px] md:pb-[60px]">
                 <p
@@ -903,9 +903,7 @@
             alt="bg-img"
           />
         </div>
-        <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div class="max-w-[568px]">
             <p
               class="text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] text-[#D7D9DD] mb-[20px] md:mb-[30px]"
@@ -932,7 +930,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -1054,22 +1052,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -1083,12 +1081,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -1104,12 +1102,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
