--- a/vaccination.html
+++ b/vaccination.html
@@ -34,7 +34,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -170,7 +170,7 @@
             alt="bg-layer"
           />
         </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[660px] pt-[24px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[135px] pb-[50px] min-[950px]:pb-[78px] text-[#D7D9DD]"
           >
@@ -210,7 +210,7 @@
           />
         </div>
         <div
-          class="relative z-[2] pb-[123px] lg:pb-[140px] sm:pt-20 pt-[60px] max-w-[1160px] px-[32px] sm:px-[40px] mx-auto"
+          class="relative z-[2] pb-[123px] lg:pb-[140px] sm:pt-20 pt-[60px] max-w-[1160px] px-8 sm:px-10 mx-auto"
         >
           <div
             class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336]"
@@ -259,7 +259,7 @@
     <section>
       <div class="bg-white overflow-hidden">
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] pt-[60px] sm:pt-[80px] mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 pt-[60px] sm:pt-[80px] mx-auto"
         >
           <div
             class="flex flex-col gap-y-0 sm:gap-x-[25px] max-[850px]:gap-x-[40px] gap-x-[70px]"
@@ -346,7 +346,7 @@
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
               >
                 <div
-                  class="flex justify-between w-full items-center pt-[15px] pb-[20px] sm:py-[32px] gap-1"
+                  class="flex justify-between w-full items-center pt-[15px] pb-[20px] sm:py-8 gap-1"
                 >
                   <p
                     class="text-base md:text-lg lg:text-xl text-[#464334] font-semibold text-start !leading-[150%] roboto-mono roboto"
@@ -421,7 +421,7 @@
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
               >
                 <div
-                  class="flex justify-between w-full items-center pt-[15px] pb-[20px] sm:py-[32px] gap-1"
+                  class="flex justify-between w-full items-center pt-[15px] pb-[20px] sm:py-8 gap-1"
                 >
                   <p
                     class="text-base md:text-lg lg:text-xl text-[#464334] font-semibold text-start !leading-[150%] roboto-mono roboto"
@@ -499,7 +499,7 @@
     <section>
       <div class="bg-white">
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] pb-[60px] pt-10 sm:py-[80px] mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 pb-[60px] pt-10 sm:py-[80px] mx-auto"
         >
           <h2 class="text-[#464334] text-2xl sm:text-4xl lg:text-[48px]">
             When to vaccinate?
@@ -690,7 +690,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[55px] sm:pt-[70px] sm:pb-10 mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 py-[55px] sm:pt-[70px] sm:pb-10 mx-auto"
         >
           <div
             data-aos="zoom-in"
@@ -728,7 +728,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -850,22 +850,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -879,12 +879,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -900,12 +900,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
