--- a/animalhealth.html
+++ b/animalhealth.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -156,7 +156,7 @@
             alt="bg-img"
           />
         </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[55px] md:pb-[80px]"
           >
@@ -198,7 +198,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1]"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1]"
         >
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
@@ -236,7 +236,7 @@
     </section>
     <!-- health check matter -->
     <section class="overflow-hidden">
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 leading-[normal]"
@@ -317,7 +317,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -391,7 +391,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -464,7 +464,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -538,7 +538,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -611,7 +611,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -684,7 +684,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -762,7 +762,7 @@
     </section>
     <!-- pet soon -->
     <section class="bg-[rgba(215,217,221,0.50)] overflow-hidden">
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mb-[28px]"
@@ -800,7 +800,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -834,7 +834,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -956,22 +956,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -985,12 +985,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -1006,12 +1006,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
