--- a/carrer.html
+++ b/carrer.html
@@ -40,7 +40,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -173,7 +173,7 @@
               alt="bg-img"
             />
           </div>
-          <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+          <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
             <div
               class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
             >
@@ -323,7 +323,7 @@
     </div>
     <!--  -->
     <section class="overflow-hidden">
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
             class="text-[#494336] text-[28px] mb-10 hidden sm:block roboto-mono"
@@ -408,7 +408,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -480,7 +480,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -553,7 +553,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -625,7 +625,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -698,7 +698,7 @@
               </p>
             </button>
             <button
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -788,7 +788,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
+          class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto"
           data-aos="zoom-out"
           data-aos-duration="800"
         >
@@ -821,7 +821,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -943,22 +943,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -972,12 +972,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -993,12 +993,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
