--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -156,7 +156,7 @@
             alt="bg-img"
           />
         </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
@@ -196,7 +196,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
             data-aos="zoom-in"
@@ -249,7 +249,7 @@
     </section>
     <!--  -->
     <section class="overflow-hidden">
-      <div class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20">
+      <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
@@ -334,7 +334,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -406,7 +406,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -477,7 +477,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -548,7 +548,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -620,7 +620,7 @@
             <button
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -692,7 +692,7 @@
             <button
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-[32px] group"
+              class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
             >
               <div class="flex justify-between w-full items-center gap-5">
                 <p
@@ -771,7 +771,7 @@
         <div
           data-aos="zoom-in"
           data-aos-duration="1000"
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] py-15 sm:py-20"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
         >
           <p
             class="text-[#494336] text-2xl md:text-[28px] leading-[normal] mb-[30px]"
@@ -803,9 +803,7 @@
             alt="bg-img"
           />
         </div>
-        <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
             class="max-w-[867px]"
             data-aos="zoom-out"
@@ -838,7 +836,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -960,22 +958,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -989,12 +987,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -1010,12 +1008,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
