--- a/travel.html
+++ b/travel.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <div class="bg-[#494336] fixed top-0 z-40 w-full">
-      <div class="max-w-[1440px] px-[30px] md:px-[40px] xl:px-[50px] mx-auto">
+      <div class="max-w-[1440px] px-[30px] md:px-10 xl:px-[50px] mx-auto">
         <div
           class="flex justify-between py-6 md:pt-[11px] md:pb-[18px] items-center gap-[50px]"
         >
@@ -156,7 +156,7 @@
             alt="bg-img"
           />
         </div>
-        <div class="max-w-[1160px] px-[32px] sm:px-[40px] mx-auto">
+        <div class="max-w-[1160px] px-8 sm:px-10 mx-auto">
           <div
             class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
@@ -194,7 +194,7 @@
           />
         </div>
         <div
-          class="max-w-[1160px] mx-auto px-[32px] sm:px-[40px] pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
+          class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
@@ -286,9 +286,7 @@
             alt="bg-img"
           />
         </div>
-        <div
-          class="max-w-[1160px] px-[32px] sm:px-[40px] py-[60px] sm:py-[80px] mx-auto"
-        >
+        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
             data-aos="zoom-in"
             data-aos-duration="1000"
@@ -320,7 +318,7 @@
     <!-- footer -->
     <footer>
       <div class="bg-[#494336]">
-        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-[60px] mx-auto">
+        <div class="max-w-[1364px] px-8 max-sm:pb-[111px] py-15 mx-auto">
           <div class="flex justify-between gap-10 max-[950px]:flex-wrap">
             <div class="max-w-[309px]">
               <label
@@ -442,22 +440,22 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Preventive Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Sick Patient Care</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Surgery</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./sevices.html"
                     >Additional Services</a
                   >
@@ -471,12 +469,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./about.html"
                     >About us</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="./carrer.html"
                     >Carreers</a
                   >
@@ -492,12 +490,12 @@
                 </p>
                 <div class="flex flex-col gap-[7px]">
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="tel:(212) 123-4567"
                     >Phone: (212) 123-4567</a
                   >
                   <a
-                    class="text-[#D7D9DD] text-sm sm:text-base text-underline duration-700 links"
+                    class="text-[#D7D9DD] text-sm sm:text-base underline duration-700 links"
                     href="mailto:hello@nebulavets.com"
                     >hello@nebulavets.com</a
                   >
